# agda2hs-cabal

./: CHANGELOG.md  LICENSE  README.md  Setup.hs  agda2hs-cabal.cabal
src/: Greeting.agda  Main.hs
